--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
